rm test1.py from git and change config example

--- a/src/config.json.example
+++ b/src/config.json.example
@@ -20,7 +20,7 @@
   "colors": {
     "stickerlist_background": [49, 51, 56, 255]
   },
-  "survey_channel_id":######,
+  "survey_channel_id":1156970437977325638,
   "prefix": "$",
   "debug": true
 }
